syntax = "proto3";

package transaction;

message Transaction {
  optional string sender = 1;
  optional string recipient = 2;
  optional double amount = 3;
  optional string signature = 4;
  optional int32 nonce = 5;
  optional string public_key = 6;
}
